apps/fluytcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluytcloud
  namespace: fluytcloud
  labels:
    app: fluytcloud
spec:
  ports:
    - port: 80
      name: http-80
      protocol: TCP
      targetPort: 8080
  selector:
    app: fluytcloud
