apps/fluytcloud/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fluytcloud
  namespace: istio-system
spec:
  gateways:
    - bookinfo-gateway
  hosts:
    - 'fluytcloud.com'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: fluytcloud.fluytcloud.svc.cluster.local
            port:
              number: 80
